--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,40 @@
 /* You can add global styles to this file, and also import other style files */
+// *
+//   border: solid 1px black
+
+/* 複寫區 start
+
+ul
+  padding: 0
+  list-style: none
+
+h2
+  margin: 0
+  margin-bottom: 25px
+  font-weight: 400
+
+  &::after
+    content: ""
+    display: inline-block
+    width: 20px
+    height: 8px
+    background-color: #ff7168
+    margin-left: 10px
+
+h4
+  margin: 0
+  margin-top: 40px
+  opacity: 0.8
+  font-weight: 400
+
+a
+  color: white
+  text-decoration: none
+
+hr
+  border: none
+  border-bottom: solid 4px #ff7168
+  width: 40%
+  margin-left: 0
+
+/* 複寫區 end
