--- a/src/app/pages/basic-css-and-mouse-interactive/basic-css-and-mouse-interactive.component.html
+++ b/src/app/pages/basic-css-and-mouse-interactive/basic-css-and-mouse-interactive.component.html
@@ -1,13 +1,18 @@
 <div class="scene">
+  <h1 class="title">Where is my Cake!!
+    <br>
+    <span class="question">Did you see it?</span>
+  </h1>
+
   <div class="person">
+    <div class="message">Uh..... I didn't eat it</div>
     <div class="hairs">
-      <div class="hairs1"></div>
-      <div class="hairs2"></div>
-      <div class="hairs3"></div>
+      <div class="hair1"></div>
+      <div class="hair2"></div>
+      <div class="hair3"></div>
     </div>
     <div class="body">
       <div class="eyes">
-        <div class="eye"></div>
         <div class="eye">
           <div class="eye-ball"></div>
         </div>
